# vtsync

./: .gitignore  pyproject.toml
vtsync/: __init__.py
vtsync/api/: __init__.py  sync.py  webservice.py
vtsync/base/api/: __init__.py  sync.py  webservice.py
vtsync/database/: __init__.py
vtsync/database/engine/: database.py
vtsync/database/models/: history.py
vtsync/development/: __main__.py  docker-compose.yml  env  new.ipynb  old.ipynb  old2.ipynb  remote.ipynb  test.ipynb
