[tool.poetry]
name = "vtsync"
version = "0.1.3"
description = ""
authors = ["WorkWithDante <dantedevenir@outlook.com>"]
readme = "README.md"
packages = [
    {include = "api", from = "vtsync/base"},
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"